# Game_Raylib

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/: pre-commit
example/: CMakeLists.txt
example/example00_model/: CMakeLists.txt
example/example00_model/src/: model.cpp
example/example01_2dplatformer/: CMakeLists.txt
example/example01_2dplatformer/src/: main.cpp
example/example02_atlas/: CMakeLists.txt
example/example02_atlas/src/: main.cpp
example/example03_model2/: CMakeLists.txt
example/example03_model2/src/: model.cpp
example/example04_game_of_life/: CMakeLists.txt  ReadMe.md
example/example04_game_of_life/src/: Grid.cpp  Grid.hpp  Simulation.cpp  Simulation.hpp  main.cpp
src/: CMakeLists.txt  main.cpp
